apps/radarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.ramoneees.com`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: wildcard-ramoneees-com-tls
